[gd_scene load_steps=13 format=3 uid="uid://bsex10iks6ray"]

[ext_resource type="Script" path="res://ui/debug_text.gd" id="1_hxn83"]
[ext_resource type="Theme" uid="uid://dg85bj1idrpik" path="res://ui/gameui.tres" id="1_q8utu"]
[ext_resource type="Script" path="res://ui/gameui.gd" id="2_eib2f"]
[ext_resource type="Texture2D" uid="uid://bnj6y2d1xviwh" path="res://resources/game_logo.svg" id="2_rfdtt"]
[ext_resource type="Script" path="res://ui/gameui_console.gd" id="4_bpy0i"]
[ext_resource type="Script" path="res://ui/gameui_action.gd" id="5_3lkbc"]

[sub_resource type="SystemFont" id="SystemFont_xxlui"]
font_names = PackedStringArray("Monospace")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4gsr"]

[sub_resource type="SystemFont" id="SystemFont_rvuh5"]
font_names = PackedStringArray("Monospace")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6i7xm"]
bg_color = Color(0.337255, 0.337255, 0.337255, 1)
border_width_left = 4
border_width_right = 4
border_color = Color(0.337255, 0.337255, 0.337255, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xpht"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a54it"]

[node name="GameUI" type="Control"]
top_level = true
z_index = 1000
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q8utu")
script = ExtResource("2_eib2f")

[node name="ColorRect" type="ColorRect" parent="." groups=["window_xy"]]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="." groups=["window_xy"]]
z_index = 2000
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" groups=["window_xy"]]
layout_mode = 2

[node name="DebugText" type="Label" parent="MarginContainer/HBoxContainer" groups=["window_x"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_q8utu")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
horizontal_alignment = 2
clip_text = true
text_overrun_behavior = 3
script = ExtResource("1_hxn83")

[node name="Console" type="Window" parent="."]
title = "Console"
position = Vector2i(100, 100)
size = Vector2i(600, 400)
always_on_top = true
popup_window = true
min_size = Vector2i(100, 100)
theme_override_constants/resize_margin = 16

[node name="ColorRect" type="ColorRect" parent="Console"]
offset_top = -24.0
offset_right = 100.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.52549, 0.188235, 0.266667, 1)

[node name="ConsoleContainer" type="VBoxContainer" parent="Console"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 2

[node name="ConsoleTextContainer" type="Control" parent="Console/ConsoleContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Console/ConsoleContainer/ConsoleTextContainer"]
layout_mode = 2
offset_top = -12.0
offset_right = 100.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.560784, 0.188235, 0.25098, 1)

[node name="ConsoleText" type="RichTextLabel" parent="Console/ConsoleContainer/ConsoleTextContainer"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 2
theme = ExtResource("1_q8utu")
theme_override_fonts/normal_font = SubResource("SystemFont_xxlui")
theme_override_font_sizes/normal_font_size = 13
theme_override_styles/focus = SubResource("StyleBoxEmpty_n4gsr")
selection_enabled = true

[node name="ConsoleInput" type="LineEdit" parent="Console/ConsoleContainer"]
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
theme = ExtResource("1_q8utu")
theme_override_fonts/font = SubResource("SystemFont_rvuh5")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_6i7xm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3xpht")
clear_button_enabled = true
deselect_on_focus_loss_enabled = false
script = ExtResource("4_bpy0i")

[node name="MainMenu" type="MarginContainer" parent="." groups=["window_y"]]
layout_mode = 0
offset_right = 552.0
offset_bottom = 720.0
theme_override_constants/margin_left = 76
theme_override_constants/margin_bottom = 20
script = ExtResource("5_3lkbc")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("2_rfdtt")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
theme_override_constants/separation = 12

[node name="ResumeGameButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("1_q8utu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.705882)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 13
theme_override_styles/focus = SubResource("StyleBoxEmpty_a54it")
action_mode = 0
text = "RESUME GAME"
flat = true
alignment = 0

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("1_q8utu")
text = "NEW GAME"
alignment = 0

[node name="LoadGameButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
text = "LOAD GAME"
alignment = 0

[node name="SaveGameButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
text = "SAVE GAME"
alignment = 0

[node name="OptionsButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
text = "OPTIONS"
alignment = 0

[node name="ConsoleButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
text = "CONSOLE"
alignment = 0

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q8utu")
text = "QUIT"
alignment = 0

[connection signal="child_entered_tree" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="child_exiting_tree" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="draw" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="ready" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render" binds= [0]]
[connection signal="tree_entered" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="tree_exited" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="tree_exiting" from="MarginContainer/HBoxContainer/DebugText" to="MarginContainer/HBoxContainer/DebugText" method="render"]
[connection signal="close_requested" from="Console" to="." method="on_console_close_requested"]
[connection signal="text_submitted" from="Console/ConsoleContainer/ConsoleInput" to="Console/ConsoleContainer/ConsoleInput" method="eval"]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/ResumeGameButton" to="MainMenu" method="on_button_click" binds= [&"gameui_resume"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/NewGameButton" to="MainMenu" method="on_button_click" binds= [&"gameui_new_game"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/LoadGameButton" to="MainMenu" method="on_button_click" binds= [&"gameui_load_game"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/SaveGameButton" to="MainMenu" method="on_button_click" binds= [&"gameui_save_game"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/OptionsButton" to="MainMenu" method="on_button_click" binds= [&"gameui_options"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/ConsoleButton" to="MainMenu" method="on_button_click" binds= ["gameui_console"]]
[connection signal="button_down" from="MainMenu/VBoxContainer/VBoxContainer/QuitButton" to="MainMenu" method="on_button_click" binds= [&"gameui_quit"]]
